--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "5.10.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "cep-promise": "^4.4.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
